Naive approach with a separate scheduler

--- a/ui/app/templates/components/job-page/system.hbs
+++ b/ui/app/templates/components/job-page/system.hbs
@@ -17,6 +17,8 @@
 
   <JobPage::Parts::PlacementFailures @job={{this.job}} />
 
+  <JobPage::Parts::LatestDeployment @job={{this.job}} @handleError={{action "handleError"}} />
+
   <JobPage::Parts::TaskGroups
     @job={{this.job}}
     @sortProperty={{this.sortProperty}}
